--- a/backend/templates/404.html
+++ b/backend/templates/404.html
@@ -1,7 +1,13 @@
-{% extends "base.html" %}
-{% block title %}Страница не найдена{% endblock %}
-{% block content %}
-  <h1>Страница не найдена</h1>
-  <p>Страницы с адресом {{ request.build_absolute_uri }} не существует!</p>
-  <a href="{% url 'blog:index' %}">Вернуться на главную</a>
-{% endblock %}
+<html lang="ru">
+  <head>
+  </head>
+  <body>
+    <main>
+      <div class="container py-5">
+        <h1>Страница не найдена</h1>
+        <p>Страницы таким адресом не существует!</p>
+        <a href="https://foodie.myvnc.com/recipes">Вернуться на главную</a>
+      </div>
+    </main>
+  </body>
+</html>
